Added 2 new sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="indexcss.css"/>
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.13.0/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <title>Portfolio</title>
     <script>
@@ -44,16 +46,24 @@
             <hr>
           </section>
         </article>
-        <article class="row">
-          <section class="col">
-            <h3 class="info">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu velit sit amet metus fringilla vehicula. Morbi vulputate ipsum in mi volutpat ultricies. Vivamus mattis gravida sapien eu lobortis. Morbi sed nulla mi. Etiam vel nisl id sapien luctus venenatis non et ex. Integer et tortor convallis, scelerisque libero venenatis, mattis tortor. Vestibulum interdum
-            </h3>
-            <hr>
-          </section>
+        <article class="info row">
+            <h2 class="display-3 text-center"> O mnie </h2>
+              <div class="col">
+              <h4><i class="bi bi-chevron-right text-center"><b>Imie:</b> Radoslaw</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Nazwisko:</b> Wojtczak</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Wiek:</b> 21</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Status:</b> Student</i></h4>
+              </div>
+              <div class="col">
+              <h4><i class="bi bi-chevron-right"><b>Uczelnia:</b> Politechnika Wroclawska</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Data urodzenia:</b> 11.06.2000</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Miejscowosc:</b> Zmigrod</i></h4>
+              </div>
         </article>
-      </header>
-        <article class="timeline text-white" data-aos="fade-up">
+        <hr>
+      </header class="row">
+        <div class="col-sm-1"></div>
+        <article class=" col-sm-10 timeline text-white" data-aos="fade-up">
           <h2 class="display-3 text-center"> Os czasu</h2>
         <section class="my-container right">
           <div class="content">
@@ -80,65 +90,72 @@
           </div>
         </section>
       </article>
+      <div class="col-sm-1"></div>
       <hr>
       <article class="aos-init aos-animate" data-aos="fade-left">
         <h2 class="display-3 text-center"> Zainteresowania</h2>
         <section class="row">
-          <div class="borders col text-center text-black bg-white m-3">
+          <div class="borders col-sm-2"></div>
+          <div class="borders col-sm-4 text-center text-black bg-white m-3">
             <h1> Szachy </h1>
             <h3> <i class="icon-king"></i> </h3>
             <h4> Początkujący szachista, ulubione otwarcia: Gambit Hetmański i Obrona Francuska</h4>
           </div>
-          <div class="borders col text-center text-black bg-white m-3">
+          <div class="borders col-sm-4 text-center text-black bg-white m-3">
             <h1> Literatura </h1>
             <h3> <i class="icon-book"></i> </h3>
             <h4> Pasjonat literatury filozoficznej, science fiction oraz kryminałów</h4>
           </div>
+          <div class="borders col-sm-2"></div>
         </section>
         <section class="row">
-          <div class="borders col text-center text-black bg-white m-3">
+          <div class="borders col-sm-2"></div>
+          <div class="borders col-sm-4 text-center text-black bg-white m-3">
             <h1> Sport </h1>
             <h3> <i class="icon-soccer-ball"></i> </h3>
             <h4> Fan sportów wszelakich z naciskiem na piłkę nożną oraz hokej </h4>
           </div>
-          <div class="borders col text-center text-black bg-white m-3">
-            <h1> Gry komputerowe </h1>
+          <div class="borders col-sm-4 text-center text-black bg-white m-3">
+            <h1> Gry</h1>
             <h3> <i class="icon-gamepad"></i> </h3>
             <h4>Wieloletni gracz takich tytułów jak League of Legends czy StarCraft2 </h4>
           </div>
+          <div class="borders col-sm-2"></div>
         </section>
         <section class="row">
-          <div class="borders col text-center text-black bg-white m-3">
+          <div class="borders col-sm-2"></div>
+          <div class="borders col-sm-4 text-center text-black bg-white m-3">
             <h1 class="title"> Algorytmika </h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
             <h4 class="description">Automatyzacja i zwiekszenie efektywnosci prac z pewnoscia interesuja kazda osobe zwiazana z informatyka</h4>
           </div>
-          <div class="borders col text-center text-black bg-white m-3">
+          <div class="borders col-sm-4 text-center text-black bg-white m-3">
             <h1 class="title"> Uczenie maszynowe</h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
             <h4 class="description"> Wspaniale polaczenie algorytmiki z matematyka pozwalajace na odkrywanie nowego sposobu na rozwiazywanie codziennych problemow</h4>
           </div>
+          <div class="borders col-sm-2"></div>
         </section>
       </article>
       <hr>
       <article class="aos-init aos-animate" data-aos="fade-right">
         <h2 class="display-3 text-center"> Studenckie projekty</h2>
        <section class="row">
-          <div class="borders col text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">Trylma</h2>
               <p class="card-text">Napisana w jezyku Java gra planszowa wieloosobowa na planszy w kształcie gwiazdy sześcioramiennej. Nazywana "chińskimi warcabami". Ow gra zawiera mozliwosc wprowadzenia modyfikacji odnosnie planszy, liczby graczy jak i umozliwia rozgrywke lokalnie jak i on-line.</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Trylma---technologie-programowania">GITHUB</a>
             </div>
           </div>
-          <div class="borders col text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">Dziennik</h2>
               <p class="card-text">Aplikacja w jezyku Java imitujaca funkcjonowanie dziennikow powszechnie wykorzystywanych w obecnych szkolach. Zezwala na wykonywanie podstawowych operacji zwiazanych z ocenianiem pracy uczniow. Do przechowywania danych wykorzystano relacyjna baze danych MariaDB</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Bazy-danych">GITHUB</a>
             </div>
           </div>
-          <div class="borders col text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">SportsScoreApp</h2>
               <p class="card-text">Aplikacja na telefon napisana w jezyku Kotlin wykorzystujaca ROOM dla fanatykow sportu, pozwalajaca na przegladanie wynikow topowych lig w dwoch dyscyplinach sportowych- pilce noznej oraz koszykowce.</p>
@@ -148,12 +165,84 @@
         </section>
       </article>
       <hr>
-      <article>
-        <h2 class="display-3 text-center"> Wlasne projekty</h2>
+      <article data-aos="fade-down-left">
+        <h2 class="display-3 text-center " > Wlasne projekty</h2>
+        <section class="row">
+          <div class="borders col-sm-6 text-center text-white bg-dark card">
+              <div class="card-body">
+                <h2 class="card-title">Fantasy LCK</h2>
+                <p class="card-text">Strona internetowa pozwalajaca na utworzenie wymarzonego skladu zlozonego z graczy najlepszej Koreanskiej Ligi w grze League of Legends i rywalizacji ze znajomymi w formacie "fantasy"</p>
+                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
+              </div>
+            </div>
+            <div class="borders col-sm-6 text-center text-white bg-dark card">
+              <div class="card-body">
+                <h2 class="card-title">Portfolio</h2>
+                <p class="card-text">Strona, ktora wlasnie przegladasz! Na niej znajduja sie najwazniejsze informacje dotyczace mojej osoby oraz mojejtworczosci</p>
+                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
+              </div>
+            </div>
+          </section>
+      </article>
+      <hr>
+      <article class="text-center">
+        <h2 class="display-3 text-center " >Jezyki i technologie</h2>
+        <section class="row m-3">
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-c-plain colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-cplusplus-plain colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-bash-plain colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-html5-plain-wordmark colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-bootstrap-plain-wordmark colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-css3-plain-wordmark colored"></i>
+          </div>
+        </section>
+        <section class="row m-3">
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-java-plain-wordmark colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-javascript-plain colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-kotlin-plain colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-linux-plain colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-mysql-plain-wordmark colored"></i>
+          </div>
+          <div class="col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-python-plain-wordmark colored"></i>
+          </div>
+        </section>
       </article>
       <hr>
       <footer id="contact">
-        <h1 id="contact-title" class="sectionTitle">Dane do kontaktu</h1>
+        <h2 class="display-3 text-center ">Dane do kontaktu</h2>
         <button class="btn-lg" onclick="clipboardFacebook()"><i class="icon-facebook-squared"></i></button>
         <button class="btn-lg" onclick="clipboardEmail()"><i class="icon-mail"></i></button>
         <button class="btn-lg" onclick="clipboardLinkedIn()"><i class="icon-linkedin-squared"></i></button>
@@ -164,6 +253,6 @@
 </html>
 <script>
     AOS.init({
-      duration: 2000,
+      duration: 1000,
     })
 </script>
