fixed div border

--- a/index.html
+++ b/index.html
@@ -188,53 +188,53 @@
       <article class="text-center">
         <h2 class="display-3 text-center " >Jezyki i technologie</h2>
         <section class="row m-3">
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-c-plain colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-cplusplus-plain colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-bash-plain colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-html5-plain-wordmark colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-bootstrap-plain-wordmark colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-css3-plain-wordmark colored"></i>
           </div>
         </section>
         <section class="row m-3">
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-java-plain-wordmark colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-javascript-plain colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-kotlin-plain colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-linux-plain colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-mysql-plain-wordmark colored"></i>
           </div>
-          <div class="col">
+          <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-python-plain-wordmark colored"></i>
           </div>
