--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </article>
       <div class="col-sm-1"></div>
       <hr>
-      <article class="aos-init aos-animate" data-aos="fade-left">
+      <article  data-aos="fade-left">
         <h2 class="display-3 text-center"> Zainteresowania</h2>
         <section class="row">
           <div class="borders col-sm-2"></div>
@@ -157,29 +157,29 @@
           </div>
           <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
             <div class="card-body">
-              <h2 class="card-title">SportsScoreApp</h2>
-              <p class="card-text">Aplikacja na telefon napisana w jezyku Kotlin wykorzystujaca ROOM dla fanatykow sportu, pozwalajaca na przegladanie wynikow topowych lig w dwoch dyscyplinach sportowych- pilce noznej oraz koszykowce.</p>
+              <h2 class="card-title">Ukladanka</h2>
+              <p class="card-text">Prosta strona internetowa, ktora przy pomocy Javascripta pozwala na ulozenie wybranego zdjecia z puzli! Przesuwaj czerwony kwadrat az otrzymasz z powrotem swoje pierwotne zdjecie. (Z dokladnoscia do kwadracika)</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
             </div>
           </div>
         </section>
       </article>
       <hr>
-      <article data-aos="fade-down-left">
+      <article data-aos="fade-right">
         <h2 class="display-3 text-center " > Wlasne projekty</h2>
         <section class="row">
-          <div class="borders col-sm-6 text-center text-white bg-dark card">
+          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
               <div class="card-body">
                 <h2 class="card-title">Fantasy LCK</h2>
                 <p class="card-text">Strona internetowa pozwalajaca na utworzenie wymarzonego skladu zlozonego z graczy najlepszej Koreanskiej Ligi w grze League of Legends i rywalizacji ze znajomymi w formacie "fantasy"</p>
                 <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
               </div>
             </div>
-            <div class="borders col-sm-6 text-center text-white bg-dark card">
+            <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
               <div class="card-body">
                 <h2 class="card-title">Portfolio</h2>
                 <p class="card-text">Strona, ktora wlasnie przegladasz! Na niej znajduja sie najwazniejsze informacje dotyczace mojej osoby oraz mojejtworczosci</p>
-                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
+                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/41761707.github.io">GITHUB</a>
               </div>
             </div>
           </section>
