Added Polish special characters (ł,ą,ż,...)

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
         <article class="info row">
             <h2 class="display-3 text-center"> O mnie </h2>
               <div class="col">
-              <h4><i class="bi bi-chevron-right text-center"><b>Imie:</b> Radoslaw</i></h4>
+              <h4><i class="bi bi-chevron-right text-center"><b>Imię:</b> Radosław</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Nazwisko:</b> Wojtczak</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Wiek:</b> 21</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Status:</b> Student</i></h4>
               </div>
               <div class="col">
-              <h4><i class="bi bi-chevron-right"><b>Uczelnia:</b> Politechnika Wroclawska</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Uczelnia:</b> Politechnika Wrocławska</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Data urodzenia:</b> 11.06.2000</i></h4>
-              <h4><i class="bi bi-chevron-right"><b>Miejscowosc:</b> Zmigrod</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Miejscowość:</b> Żmigrod</i></h4>
               </div>
         </article>
         <hr>
       </header class="row">
         <div class="col-sm-1"></div>
         <article class=" col-sm-10 timeline text-white" data-aos="fade-up">
-          <h2 class="display-3 text-center"> Os czasu</h2>
+          <h2 class="display-3 text-center"> Oś czasu</h2>
         <section class="my-container right">
           <div class="content">
             <h2>2019-aktualnie</h2>
@@ -127,12 +127,12 @@
           <div class="borders col-sm-4 text-center text-black bg-white m-3">
             <h1 class="title"> Algorytmika </h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
-            <h4 class="description">Automatyzacja i zwiekszenie efektywnosci prac z pewnoscia interesuja kazda osobe zwiazana z informatyka</h4>
+            <h4 class="description">Automatyzacja i zwiększenie efektywności pracy z pewnoscią interesują każdą osobę związaną z informatyką</h4>
           </div>
           <div class="borders col-sm-4 text-center text-black bg-white m-3">
             <h1 class="title"> Uczenie maszynowe</h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
-            <h4 class="description"> Wspaniale polaczenie algorytmiki z matematyka pozwalajace na odkrywanie nowego sposobu na rozwiazywanie codziennych problemow</h4>
+            <h4 class="description"> Wspaniałe połączenie algorytmiki z matematyką pozwalające na odkrywanie nowego sposobu na rozwiązywanie codziennych problemów</h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
@@ -144,21 +144,21 @@
           <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">Trylma</h2>
-              <p class="card-text">Napisana w jezyku Java gra planszowa wieloosobowa na planszy w kształcie gwiazdy sześcioramiennej. Nazywana "chińskimi warcabami". Ow gra zawiera mozliwosc wprowadzenia modyfikacji odnosnie planszy, liczby graczy jak i umozliwia rozgrywke lokalnie jak i on-line.</p>
+              <p class="card-text">Napisana w języku Java wieloosobowa gra planszowa na planszy w kształcie gwiazdy sześcioramiennej. Nazywana "chińskimi warcabami". Ów gra zawiera mozliwość wprowadzenia modyfikacji odnośnie planszy, liczby graczy jak i umożliwia rozgrywkę lokalnie jak i on-line.</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Trylma---technologie-programowania">GITHUB</a>
             </div>
           </div>
           <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">Dziennik</h2>
-              <p class="card-text">Aplikacja w jezyku Java imitujaca funkcjonowanie dziennikow powszechnie wykorzystywanych w obecnych szkolach. Zezwala na wykonywanie podstawowych operacji zwiazanych z ocenianiem pracy uczniow. Do przechowywania danych wykorzystano relacyjna baze danych MariaDB</p>
+              <p class="card-text">Aplikacja w języku Java imitująca funkcjonowanie dzienników powszechnie wykorzystywanych w obecnych szkołach. Zezwala na wykonywanie podstawowych operacji związanych z ocenianiem pracy uczniów. Do przechowywania danych wykorzystano relacyjną bazę danych MariaDB</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Bazy-danych">GITHUB</a>
             </div>
           </div>
           <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">Ukladanka</h2>
-              <p class="card-text">Prosta strona internetowa, ktora przy pomocy Javascripta pozwala na ulozenie wybranego zdjecia z puzli! Przesuwaj czerwony kwadrat az otrzymasz z powrotem swoje pierwotne zdjecie. (Z dokladnoscia do kwadracika)</p>
+              <p class="card-text">Prosta strona internetowa, która przy pomocy Javascripta pozwala na ułozenie wybranego zdjecia z puzli! Przesuwaj czerwony kwadrat az otrzymasz z powrotem swoje pierwotne zdjęcie. (Z dokładnoscią do kwadracika)</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
             </div>
           </div>
@@ -171,14 +171,14 @@
           <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
               <div class="card-body">
                 <h2 class="card-title">Fantasy LCK</h2>
-                <p class="card-text">Strona internetowa pozwalajaca na utworzenie wymarzonego skladu zlozonego z graczy najlepszej Koreanskiej Ligi w grze League of Legends i rywalizacji ze znajomymi w formacie "fantasy"</p>
+                <p class="card-text">Strona internetowa pozwalająca na utworzenie wymarzonego składu złożonego z graczy najlepszej Koreanskiej Ligi w grze League of Legends i rywalizację ze znajomymi w formacie "fantasy"</p>
                 <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
               </div>
             </div>
             <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
               <div class="card-body">
                 <h2 class="card-title">Portfolio</h2>
-                <p class="card-text">Strona, ktora wlasnie przegladasz! Na niej znajduja sie najwazniejsze informacje dotyczace mojej osoby oraz mojejtworczosci</p>
+                <p class="card-text">Strona, która własnie przeglądasz! Na niej znajdują sie najważniejsze informacje dotyczące mojej osoby oraz mojej twórczosci</p>
                 <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/41761707.github.io">GITHUB</a>
               </div>
             </div>
