Changes in projects scope

--- a/index.html
+++ b/index.html
@@ -141,25 +141,32 @@
       <article class="aos-init aos-animate" data-aos="fade-right">
         <h2 class="display-3 text-center"> Studenckie projekty</h2>
        <section class="row">
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">Trylma</h2>
               <p class="card-text">Napisana w języku Java wieloosobowa gra planszowa na planszy w kształcie gwiazdy sześcioramiennej. Nazywana "chińskimi warcabami". Ów gra zawiera mozliwość wprowadzenia modyfikacji odnośnie planszy, liczby graczy jak i umożliwia rozgrywkę lokalnie jak i on-line.</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Trylma---technologie-programowania">GITHUB</a>
             </div>
           </div>
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">Dziennik</h2>
               <p class="card-text">Aplikacja w języku Java imitująca funkcjonowanie dzienników powszechnie wykorzystywanych w obecnych szkołach. Zezwala na wykonywanie podstawowych operacji związanych z ocenianiem pracy uczniów. Do przechowywania danych wykorzystano relacyjną bazę danych MariaDB</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Bazy-danych">GITHUB</a>
             </div>
           </div>
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
             <div class="card-body">
               <h2 class="card-title">Ukladanka</h2>
               <p class="card-text">Prosta strona internetowa, która przy pomocy Javascripta pozwala na ułozenie wybranego zdjecia z puzli! Przesuwaj czerwony kwadrat az otrzymasz z powrotem swoje pierwotne zdjęcie. (Z dokładnoscią do kwadracika)</p>
-              <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
+              <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Puzzle">GITHUB</a>
+            </div>
+          </div>
+          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
+            <div class="card-body">
+              <h2 class="card-title">Edytor Graficzny</h2>
+              <p class="card-text">Program napisany w Javie imitujący działanie programu Paint, pozwalający na rysowanie oraz modyfikowanie różnych figur geometrycznych.W skład możliwych modyfikacji wchodzą: Zmiana rozmiaru, położenia oraz koloru wybraej figury</p>
+              <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Drawing">GITHUB</a>
             </div>
           </div>
         </section>
@@ -172,7 +179,7 @@
               <div class="card-body">
                 <h2 class="card-title">Fantasy LCK</h2>
                 <p class="card-text">Strona internetowa pozwalająca na utworzenie wymarzonego składu złożonego z graczy najlepszej Koreanskiej Ligi w grze League of Legends i rywalizację ze znajomymi w formacie "fantasy"</p>
-                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/SportsScoreApp">GITHUB</a>
+                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/FantasyLCK">GITHUB</a>
               </div>
             </div>
             <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
