--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
       </article>
       <div class="col-sm-1"></div>
       <hr>
-      <article  data-aos="fade-left">
+      <article  data-aos="fade-down">
         <h2 class="display-3 text-center"> Zainteresowania</h2>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-black bg-white m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
             <h1> Szachy </h1>
             <h3> <i class="icon-king"></i> </h3>
             <h4> Początkujący szachista, ulubione otwarcia: Gambit Hetmański i Obrona Francuska</h4>
           </div>
-          <div class="borders col-sm-4 text-center text-black bg-white m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
             <h1> Literatura </h1>
             <h3> <i class="icon-book"></i> </h3>
             <h4> Pasjonat literatury filozoficznej, science fiction oraz kryminałów</h4>
@@ -110,12 +110,12 @@
         </section>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-black bg-white m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
             <h1> Sport </h1>
             <h3> <i class="icon-soccer-ball"></i> </h3>
             <h4> Fan sportów wszelakich z naciskiem na piłkę nożną oraz hokej </h4>
           </div>
-          <div class="borders col-sm-4 text-center text-black bg-white m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
             <h1> Gry</h1>
             <h3> <i class="icon-gamepad"></i> </h3>
             <h4>Wieloletni gracz takich tytułów jak League of Legends czy StarCraft2 </h4>
@@ -124,12 +124,12 @@
         </section>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-black bg-white m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
             <h1 class="title"> Algorytmika </h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
             <h4 class="description">Automatyzacja i zwiększenie efektywności pracy z pewnoscią interesują każdą osobę związaną z informatyką</h4>
           </div>
-          <div class="borders col-sm-4 text-center text-black bg-white m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
             <h1 class="title"> Uczenie maszynowe</h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
             <h4 class="description"> Wspaniałe połączenie algorytmiki z matematyką pozwalające na odkrywanie nowego sposobu na rozwiązywanie codziennych problemów</h4>
@@ -141,28 +141,28 @@
       <article class="aos-init aos-animate" data-aos="fade-right">
         <h2 class="display-3 text-center"> Studenckie projekty</h2>
        <section class="row">
-          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
               <h2 class="card-title">Trylma</h2>
               <p class="card-text">Napisana w języku Java wieloosobowa gra planszowa na planszy w kształcie gwiazdy sześcioramiennej. Nazywana "chińskimi warcabami". Ów gra zawiera mozliwość wprowadzenia modyfikacji odnośnie planszy, liczby graczy jak i umożliwia rozgrywkę lokalnie jak i on-line.</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Trylma---technologie-programowania">GITHUB</a>
             </div>
           </div>
-          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
               <h2 class="card-title">Dziennik</h2>
               <p class="card-text">Aplikacja w języku Java imitująca funkcjonowanie dzienników powszechnie wykorzystywanych w obecnych szkołach. Zezwala na wykonywanie podstawowych operacji związanych z ocenianiem pracy uczniów. Do przechowywania danych wykorzystano relacyjną bazę danych MariaDB</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Bazy-danych">GITHUB</a>
             </div>
           </div>
-          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
               <h2 class="card-title">Ukladanka</h2>
               <p class="card-text">Prosta strona internetowa, która przy pomocy Javascripta pozwala na ułozenie wybranego zdjecia z puzli! Przesuwaj czerwony kwadrat az otrzymasz z powrotem swoje pierwotne zdjęcie. (Z dokładnoscią do kwadracika)</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Puzzle">GITHUB</a>
             </div>
           </div>
-          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
               <h2 class="card-title">Edytor Graficzny</h2>
               <p class="card-text">Program napisany w Javie imitujący działanie programu Paint, pozwalający na rysowanie oraz modyfikowanie różnych figur geometrycznych.W skład możliwych modyfikacji wchodzą: Zmiana rozmiaru, położenia oraz koloru wybraej figury</p>
@@ -172,17 +172,17 @@
         </section>
       </article>
       <hr>
-      <article data-aos="fade-right">
-        <h2 class="display-3 text-center " > Wlasne projekty</h2>
+      <article data-aos="fade-up">
+        <h2 class="display-3 text-center"> Wlasne projekty</h2>
         <section class="row">
-          <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
+          <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
               <div class="card-body">
                 <h2 class="card-title">Fantasy LCK</h2>
                 <p class="card-text">Strona internetowa pozwalająca na utworzenie wymarzonego składu złożonego z graczy najlepszej Koreanskiej Ligi w grze League of Legends i rywalizację ze znajomymi w formacie "fantasy"</p>
                 <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/FantasyLCK">GITHUB</a>
               </div>
             </div>
-            <div class="borders col-sm-6 text-center text-white bg-dark m-3 card">
+            <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
               <div class="card-body">
                 <h2 class="card-title">Portfolio</h2>
                 <p class="card-text">Strona, która własnie przeglądasz! Na niej znajdują sie najważniejsze informacje dotyczące mojej osoby oraz mojej twórczosci</p>
