Bigger spacing between section title and content

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </section>
         </article>
         <article class="info row">
-            <h2 class="display-3 text-center"> O mnie </h2>
+            <h2 class="display-2 mb-5 text-center"> O mnie </h2>
               <div class="col">
               <h4><i class="bi bi-chevron-right text-center"><b>Imię:</b> Radosław</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Nazwisko:</b> Wojtczak</i></h4>
@@ -64,7 +64,7 @@
       </header class="row">
         <div class="col-sm-1"></div>
         <article class=" col-sm-10 timeline text-white" data-aos="fade-up">
-          <h2 class="display-3 text-center"> Oś czasu</h2>
+          <h2 class="display-2 mb-5 text-center"> Oś czasu</h2>
         <section class="my-container right">
           <div class="content">
             <h2>2019-aktualnie</h2>
@@ -93,15 +93,15 @@
       <div class="col-sm-1"></div>
       <hr>
       <article  data-aos="fade-down">
-        <h2 class="display-3 text-center"> Zainteresowania</h2>
+        <h2 class="display-2 mb-5 text-center"> Zainteresowania</h2>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
             <h1> Szachy </h1>
             <h3> <i class="icon-king"></i> </h3>
             <h4> Początkujący szachista, ulubione otwarcia: Gambit Hetmański i Obrona Francuska</h4>
           </div>
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
             <h1> Literatura </h1>
             <h3> <i class="icon-book"></i> </h3>
             <h4> Pasjonat literatury filozoficznej, science fiction oraz kryminałów</h4>
@@ -110,12 +110,12 @@
         </section>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
             <h1> Sport </h1>
             <h3> <i class="icon-soccer-ball"></i> </h3>
             <h4> Fan sportów wszelakich z naciskiem na piłkę nożną oraz hokej </h4>
           </div>
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
             <h1> Gry</h1>
             <h3> <i class="icon-gamepad"></i> </h3>
             <h4>Wieloletni gracz takich tytułów jak League of Legends czy StarCraft2 </h4>
@@ -124,12 +124,12 @@
         </section>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
             <h1 class="title"> Algorytmika </h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
             <h4 class="description">Automatyzacja i zwiększenie efektywności pracy z pewnoscią interesują każdą osobę związaną z informatyką</h4>
           </div>
-          <div class="borders col-sm-4 text-center text-white bg-dark m-3">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
             <h1 class="title"> Uczenie maszynowe</h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
             <h4 class="description"> Wspaniałe połączenie algorytmiki z matematyką pozwalające na odkrywanie nowego sposobu na rozwiązywanie codziennych problemów</h4>
@@ -139,7 +139,7 @@
       </article>
       <hr>
       <article class="aos-init aos-animate" data-aos="fade-right">
-        <h2 class="display-3 text-center"> Studenckie projekty</h2>
+        <h2 class="display-2 mb-5 text-center"> Studenckie projekty</h2>
        <section class="row">
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
@@ -173,7 +173,7 @@
       </article>
       <hr>
       <article data-aos="fade-up">
-        <h2 class="display-3 text-center"> Wlasne projekty</h2>
+        <h2 class="display-2 mb-5 text-center"> Własne projekty</h2>
         <section class="row">
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
               <div class="card-body">
@@ -193,7 +193,7 @@
       </article>
       <hr>
       <article class="text-center">
-        <h2 class="display-3 text-center " >Jezyki i technologie</h2>
+        <h2 class="display-2 text-center mb-4" >Jezyki i technologie</h2>
         <section class="row m-3">
           <div class="newdiv col">
             <input type="checkbox" />
@@ -249,7 +249,7 @@
       </article>
       <hr>
       <footer id="contact">
-        <h2 class="display-3 text-center ">Dane do kontaktu</h2>
+        <h2 class="display-3 text-center mb-4 ">Dane do kontaktu</h2>
         <button class="btn-lg" onclick="clipboardFacebook()"><i class="icon-facebook-squared"></i></button>
         <button class="btn-lg" onclick="clipboardEmail()"><i class="icon-mail"></i></button>
         <button class="btn-lg" onclick="clipboardLinkedIn()"><i class="icon-linkedin-squared"></i></button>
